--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node --env-file=.env deploy-commands.js && node --env-file=.env index.js"
+    "start": "bun deploy-commands.js && bun index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cron": "3.1.9",
-    "discord.js": "14.16.3",
-    "mongodb": "6.10.0",
+    "cron": "3.5.0",
+    "discord.js": "14.17.3",
+    "mongodb": "6.12.0",
     "node-fetch": "3.3.2"
   }
 }
