Corrigido discloud.config

--- a/discloud.config
+++ b/discloud.config
@@ -1,8 +1,6 @@
 TYPE=bot
-MAIN=index.js
+MAIN=Dockerfile
 NAME=Boruto Raiden Discord
 RAM=128
 AUTORESTART=true
-VERSION=current
-APT=tools
 AVATAR=https://i.imgur.com/Uupjx5v.png
